# ACSE_Cpp_Exercise

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  practical-task.yml
.github/workflows/: ci.yml
docs/: PROJECT_MANAGEMENT.md  ROADMAP.md
exercises/: README.md
src/: main.cpp
src/output/: main
src/output/main.dSYM/Contents/Resources/DWARF/: main
src/output/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
tests/: smoke_test.cpp
